tasks/USR-0: Fix sonar issues